# Project_XHASH

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  mcp_server.py  pyproject.toml  run.bat
MMC/: Indicator.py  candle_patterns.py  custom_ob.py  master_strategy.py  openBB.py  openbb_strategy.py  price_action_concepts.py  smc_analysis.py  test_custom_ob.py  test_pac_real_data.py  test_pac_tv.py
agents/: __init__.py  base.py  calibration.py  fundamental_analyst.py  orchestrator.py  portfolio_manager.py  reflection_service.py  risk_manager.py  sentiment_analyst.py  technical_analyst.py  valuation_analyst.py
agents/debate/: __init__.py  aggressive_debator.py  bear_researcher.py  bull_researcher.py  conservative_debator.py  neutral_debator.py  orchestrator.py  portfolio_manager.py  reflector.py  research_manager.py  signal_processor.py
agents/hedge_fund/: __init__.py  aswath_damodaran.py  base.py  ben_graham.py  bill_ackman.py  cathie_wood.py  charlie_munger.py  growth_agent.py  michael_burry.py  mohnish_pabrai.py  nassim_taleb.py  news_sentiment.py  orchestrator.py  peter_lynch.py  phil_fisher.py  rakesh_jhunjhunwala.py  sentiment_analyst.py  stanley_druckenmiller.py  warren_buffett.py
agents/llm/: __init__.py  base.py  fundamentals_agent.py  growth_agent.py  news_sentiment_agent.py  portfolio_manager_agent.py  risk_manager_agent.py  schemas.py  sentiment_agent.py  technicals_agent.py  (+1 more)
analytics/: __init__.py  attribution.py  dashboard.py  fast_analysis.py  geopolitical.py  metrics.py  reports.py  trade.py
api/: agent_jobs.py  app.py  cache.py  chart_cache.py  mcp_extensions.py  sector_map.py  state.py  websocket_manager.py
backtesting/: __init__.py  backtest_validation.py  benchmark.py  engine.py  engine_factory.py  metrics.py  models.py  monte_carlo.py  portfolio_manager.py  run_card.py  scenario.py  synthetic_data.py  trade_executor.py  walkforward.py
charting/: __init__.py  chart_style.py
cli/: main.py
config/: __init__.py
core/: __init__.py  async_events.py  calendars.py  enums.py  errors.py  events.py  language.py  position.py  results.py  types.py
docs/: AGENTS.md  ANALYTICS.md  API.md  ARCHITECTURE.md  AUDIT.md  BACKTESTING.md  FINSCRIPT.md  FRONTEND.md  QUICKSTART.md  README.md  RISK.md  SIGNALS.md
execution/: __init__.py  backtest.py  comminfo.py  fillers.py  grid_bot.py  interfaces.py  matching.py  order.py  paper_trading.py  precision.py  strategy_lifecycle.py
finscript/: README.md  __init__.py  ast.py  builtins.py  interpreter.py  lexer.py  parser.py  tokens.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
integrations/: __init__.py  discord_bot.py  email_notifier.py  slack_bot.py  sms_notifier.py  telegram_bot.py  tradingview.py  twitter.py
llm/: capabilities.py  client.py  models.py
persistence/: __init__.py  database.py  migrate.py  models.py  repositories.py
risk/: __init__.py  circuit_breakers.py  engine.py  limits.py  position_sizing.py  stop_loss.py
scripts/: dashboard.py  live.py  run.py
signals/: __init__.py  alpha_zoo_bridge.py  base.py  composite.py  engine_registry.py  structure_state.py
tests/: conftest.py
(+1003 files in other folders)
